--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: install dependencies
         run: npm ci
-      - uses: oke-py/npm-audit-action@v2
+      - uses: kingbengs/testingnpm@master
         with:
           audit_level: moderate
           github_token: ${{ secrets.GITHUB_TOKEN }}
