--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - master
-      - 'releases/*'
 # on:
 #   schedule:
 #     - cron: '0 10 * * *'
@@ -18,10 +17,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: install dependencies
         run: npm ci
-      - uses: kingbengs/testingnpm@master
+      - uses: oke-py/npm-audit-action@v1.7.3
         with:
           audit_level: moderate
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          issue_assignees: oke-py
+#          issue_assignees: oke-py
           issue_labels: vulnerability,test
-          
+          dedupe_issues: true
