test pull requesht

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 #          issue_assignees: oke-py
           issue_labels: vulnerability,test
-          dedupe_issues: true
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+     #     dedupe_issues: true
+     
