--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,16 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 #          issue_assignees: oke-py
           issue_labels: vulnerability,test
-     #     dedupe_issues: true
+          dedupe_issues: true
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Copy files to S3 with the AWS CLI
+        run: |
+          aws s3 sync . s3://my-s3-website-bucket
      
+
