--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Copy files to S3 with the AWS CLI
         run: |
-          aws s3 sync . s3://my-s3-website-bucket
+          aws s3 sync . s3://22funnelytics01logs
      
 
